@@ -1,3 +1,8 @@
+2002-11-07  Bruno Haible  <bruno@clisp.org>
+
+	* ltmain.sh: Upgrade to libtool-1.4.3.
+	* config.rpath: Upgrade to libtool-1.4.3.
+
 2002-10-28  Bruno Haible  <haible@clisp.cons.org>
 
 	* config.guess, config.sub: Update to GNU version 2002-10-21.
